Update word wrap to not break words

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -42,7 +42,8 @@
     p {
       text-align: justify;
       text-justify: auto;
-      hyphens: auto;
+      hyphens: none;
+      word-wrap: normal;
     }
   }
 
